fill in the gaps

--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
       
       <h5>2021</h5>
       <ul>
+        <li>December 5, 2021: Chocolate Chip Oatmeal Cookies (added extra flour and oats) from <a href="https://www.kingarthurbaking.com/recipes/chocolate-chip-oatmeal-cookies-recipe">King Arthur Baking Company</a></li>
+        <li>November 25, 2021: No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
+        <li>November 24, 2021: Challah Bread from Pastry Love (Flour Bakery), page 110-113</li>
+        <li>November 13, 2021: No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
+        <li>November 12, 2021: Persian Love Cookies from Pastry Love (Flour Bakery), page 174-175</li>
+        <li>October 31, 2021: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>October 31, 2021: Homemade Chocolate-Caramel Oreos from Flour and Pastry Love (Flour Bakery)</li>
+        <li>October 3, 2021: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>September 5, 2019: Chocolate Cake with Vanilla Frosting from Vintage Cakes</li>
         <li>August 16, 2021: Zucchini Bread (variation of Carrot Bread) from The Bread Bible, page 103-105</li>
         <li>August 16, 2021: Double Chocolate Zucchini Bread from <a href="https://www.kingarthurbaking.com/recipes/double-chocolate-zucchini-bread-recipe">King Arthur Baking</a></li>
         <li>August 14, 2021: Chocolate Chip Cookies from Cook’s Illustrated</li>
