--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
       
       <h5>2021</h5>
       <ul>
+        <li>December 20, 2021: Sweet Potato Snickerdoodles from Cookies: The New Classics, page 180</li>
         <li>December 5, 2021: Chocolate Chip Oatmeal Cookies (added extra flour and oats) from <a href="https://www.kingarthurbaking.com/recipes/chocolate-chip-oatmeal-cookies-recipe">King Arthur Baking Company</a></li>
         <li>November 25, 2021: No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
         <li>November 24, 2021: Challah Bread from Pastry Love (Flour Bakery), page 110-113</li>
@@ -742,6 +743,7 @@
         <h4>This is my reference library.</h4>
       </p>
       <ul>
+        <li><a target="_blnak" href="https://www.jesseszewczyk.com/cookies">Cookies: The New Classics (2021) by Jesse Szewczyk</a></li>
         <li><a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe by Joanne Chang (2010)</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=081186944X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li><a target="_blank" href="https://www.amazon.com/dp/0471359254">Pastry Love: A Baker's Journal of Favorite Recipes by Joanne Chang (2019)</a></li>
         <li><a target="_blank" href="https://www.amazon.com/gp/product/1419715151/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1419715151&linkCode=as2&tag=wijb-20&linkId=f478b91e7fc586b7d92588a15a34b886">Baked Essentials: A Collection of Customer Favorites (2014)</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1419715151" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
