another year, another loaf

--- a/index.html
+++ b/index.html
@@ -195,8 +195,14 @@
         <h4>This is my archive of baking events.</h4>
       </p>
       
+      <h5>2022</h5>
+      <ul>
+        <li>January 2, 2022: No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
+      </ul>
+      
       <h5>2021</h5>
       <ul>
+        <li>December 31, 2021: Oatmeal Party Cookie from BigFatCookies</li>
         <li>December 25, 2021: Flour's Famous Sticky Buns from Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</li>
         <li>December 21, 2021: English Muffin Toasting Bread from <a href="https://www.kingarthurbaking.com/recipes/english-muffin-toasting-bread-recipe">King Arthur Baking Company</a></li>
         <li>December 20, 2021: Sweet Potato Snickerdoodles from Cookies: The New Classics, page 180</li>
