--- a/index.html
+++ b/index.html
@@ -197,12 +197,14 @@
       
       <h5>2022</h5>
       <ul>
+        <li>January 23, 2022: 🍪 Chocolate Chunk Cookies from Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe, page 108-109</li>
+        <li>January 21, 2022: 🍪 Peanut Butter Cookies from Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe, page 114-115</li>
         <li>January 16, 2022: 🍪 Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>January 15, 2022: Sourdough Crackers (smoked cyanne, Urfa pepper, smoked blacked pepper) from <a href="https://www.kingarthurbaking.com/recipes/sourdough-crackers-recipe">King Arthur Baking Company</a></li>
         <li>January 15, 2022: Sourdough Crackers (parmesan, onion, garlic) from <a href="https://www.kingarthurbaking.com/recipes/sourdough-crackers-recipe">King Arthur Baking Company</a></li>
         <li>January 15, 2022: 🍞 Rustic Sourdough Bread from <a href="https://www.kingarthurbaking.com/recipes/rustic-sourdough-bread-recipe">King Arthur Baking Company</a></li>
         <li>January 13, 2022: Sourdough English Muffins from <a href="https://www.kingarthurbaking.com/recipes/sourdough-english-muffins-recipe">King Arthur Baking Company</a></li>
-        <li>January 8, 2022: 🍪 Chocolate Chunk and Chip Cookies from Bouchon Bakery  page 34-35</li>
+        <li>January 8, 2022: 🍪 Chocolate Chunk and Chip Cookies from Bouchon Bakery, page 34-35</li>
         <li>January 2, 2022: 🍞 No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
       </ul>
       
