--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
       
       <h5>2022</h5>
       <ul>
+        <li>February 12, 2022: 🍪 Chocolate Chunk Cookies from Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe, page 108-109</li>
         <li>January 27, 2022: 🍞 English Muffin Toasting Bread from <a href="https://www.kingarthurbaking.com/recipes/english-muffin-toasting-bread-recipe">King Arthur Baking Company</a></li>
         <li>January 23, 2022: 🍪 Chocolate Chunk Cookies from Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe, page 108-109</li>
         <li>January 21, 2022: 🍪 Peanut Butter Cookies from Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe, page 114-115</li>
