--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
       
       <h5>2022</h5>
       <ul>
+        <li>May-December 2022: Cookies, bread, cookies, bread, cookies, bread, cookies, ...</li>
         <li>April 9, 2022: 🎂 Chocolate Malt Layer Cake from Momofuku Milk Bar, page 139-142</li>
         <li>April 9, 2022: 🍪 Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>April 9, 2022: 🍞 No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
