--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
         <h4>This is my archive of baking events.</h4>
       </p>
       
+      <h5>2023</h5>
+      <ul>
+        <li>January 14, 2023: 🍞 Banana Bread</li>
+      </ul>
+
       <h5>2022</h5>
       <ul>
         <li>May-December 2022: Cookies, bread, cookies, bread, cookies, bread, cookies, ...</li>
