add to the library and fix the header tags

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <header class="container-fluid bg-dark text-light p-5 mb-4">
       <div class="container">
-        <h1 class="display-1">I'd be lying if I didn't say <span>chocolate chip cookies</span>.</h1>
+        <span class="display-1">I'd be lying if I didn't say chocolate chip cookies.</span>
       </div>
     </header>
 
@@ -771,6 +771,7 @@
         <h4>This is my reference library.</h4>
       </p>
       <ul>
+        <li><a target="_blnak" href="https://www.amazon.com/Back-Day-Bakery-Cookbook/dp/1579654584">The Back in the Day Bakery Cookbook (2012) by Cheryl Day and Griffith Day</a></li>
         <li><a target="_blnak" href="https://www.jesseszewczyk.com/cookies">Cookies: The New Classics (2021) by Jesse Szewczyk</a></li>
         <li><a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe by Joanne Chang (2010)</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=081186944X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li><a target="_blank" href="https://www.amazon.com/dp/0471359254">Pastry Love: A Baker's Journal of Favorite Recipes by Joanne Chang (2019)</a></li>
