2023 wrap up; on to 2024

--- a/index.html
+++ b/index.html
@@ -195,8 +195,14 @@
         <h4>This is my archive of baking events.</h4>
       </p>
       
+      <h5>2024</h5>
+      <ul>
+        <li>We'll see...</li>
+      </ul>
+
       <h5>2023</h5>
       <ul>
+        <li>Feburary-December 2023: A light year for baking. Rest assured, it include chocolate chip cookies. 🍪🍪🍪</li>
         <li>January 14, 2023: 🍞 Banana Bread</li>
       </ul>
 
