--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       
       <h5>2024</h5>
       <ul>
-        <li>We'll see...</li>
+        <li>March 17, 2024: Old-Fashioned Butterscotch Pudding via <a href="https://cooking.nytimes.com/recipes/1021800-old-fashioned-butterscotch-pudding">NYT Cooking</a></li>
       </ul>
 
       <h5>2023</h5>
